@@ -1,21 +1,21 @@
 /* ==================================================================
  * JdbcAppSettingDao.java - 10/11/2021 9:18:37 AM
- * 
+ *
  * Copyright 2021 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
@@ -36,7 +36,7 @@ import net.solarnetwork.domain.SortDescriptor;
 
 /**
  * JDBC implementation of {@link AppSettingDao}.
- * 
+ *
  * @author matt
  * @version 1.0
  * @since 2.0
@@ -47,7 +47,7 @@ public class JdbcAppSettingDao implements AppSettingDao {
 
 	/**
 	 * Constructor.
-	 * 
+	 *
 	 * @param jdbcOps
 	 *        the JDBC operations
 	 * @throws IllegalArgumentException
@@ -76,7 +76,7 @@ public class JdbcAppSettingDao implements AppSettingDao {
 		List<AppSetting> result = jdbcOps.query(
 				SelectAppSetting.selectForKeyType(id.getKey(), id.getType()),
 				AppSettingRowMapper.INSTANCE);
-		return (!result.isEmpty() ? result.get(0) : null);
+		return (!result.isEmpty() ? result.getFirst() : null);
 	}
 
 	@Override
@@ -100,7 +100,7 @@ public class JdbcAppSettingDao implements AppSettingDao {
 	public AppSetting lockForUpdate(String key, String type) {
 		List<AppSetting> result = jdbcOps.query(SelectAppSetting.selectForKeyType(key, type, true),
 				AppSettingRowMapper.INSTANCE);
-		return (!result.isEmpty() ? result.get(0) : null);
+		return (!result.isEmpty() ? result.getFirst() : null);
 	}
 
 	@Override
