@@ -1,21 +1,21 @@
 /* ==================================================================
  * JdbcOAuth2AuthorizedClientService.java - 20/09/2024 1:10:34 pm
- * 
+ *
  * Copyright 2024 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
@@ -35,6 +35,8 @@ import java.sql.Timestamp;
 import java.time.Instant;
 import java.util.List;
 import java.util.Set;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.dao.DataRetrievalFailureException;
 import org.springframework.jdbc.core.JdbcOperations;
 import org.springframework.jdbc.core.PreparedStatementCreator;
@@ -57,13 +59,13 @@ import net.solarnetwork.domain.SortDescriptor;
 /**
  * A JDBC implementation of an {@link OAuth2AuthorizedClientService} that uses a
  * {@link JdbcOperations} for {@link OAuth2AuthorizedClient} persistence.
- * 
+ *
  * <p>
  * Based on
  * {@link org.springframework.security.oauth2.client.JdbcOAuth2AuthorizedClientService}.
  * The SQL table is expected to have the following structure:
  * </p>
- * 
+ *
  * <pre>{@code TABLE oauth2_authorized_client (
  *   user_id BIGINT NOT NULL,
  *   client_registration_id varchar(100) NOT NULL,
@@ -78,15 +80,17 @@ import net.solarnetwork.domain.SortDescriptor;
  *   created_at timestamp DEFAULT CURRENT_TIMESTAMP NOT NULL,
  *   PRIMARY KEY (client_registration_id, principal_name)
  * )}</pre>
- * 
+ *
  * @author matt
- * @version 1.1
+ * @version 1.2
  */
 public class JdbcOAuth2AuthorizedClientService
 		implements OAuth2AuthorizedClientService, ClientAccessTokenDao {
 
 	/** The default SQL table name to use. */
 	public static final String DEFAULT_TABLE_NAME = "solarnet.oauth2_authorized_client";
+
+	private static final Logger log = LoggerFactory.getLogger(JdbcOAuth2AuthorizedClientService.class);
 
 	private static final String LOAD_AUTHORIZED_CLIENT_SQL_TMPL = """
 			SELECT user_id
@@ -146,7 +150,7 @@ public class JdbcOAuth2AuthorizedClientService
 	/**
 	 * Constructs a {@code JdbcOAuth2AuthorizedClientService} using the provided
 	 * parameters.
-	 * 
+	 *
 	 * @param encryptor
 	 *        the encryptor
 	 * @param jdbcOperations
@@ -162,7 +166,7 @@ public class JdbcOAuth2AuthorizedClientService
 	/**
 	 * Constructs a {@code JdbcOAuth2AuthorizedClientService} using the provided
 	 * parameters.
-	 * 
+	 *
 	 * @param encryptor
 	 *        the encryptor
 	 * @param jdbcOperations
@@ -199,7 +203,7 @@ public class JdbcOAuth2AuthorizedClientService
 		final var sql = new SelectAuthorizedClient(userId, clientRegistrationId, principalName);
 		List<OAuth2AuthorizedClient> result = this.jdbcOperations.query(sql,
 				this.authorizedClientRowMapper);
-		return !result.isEmpty() ? (T) result.get(0) : null;
+		return !result.isEmpty() ? (T) result.getFirst() : null;
 	}
 
 	@Override
@@ -224,8 +228,8 @@ public class JdbcOAuth2AuthorizedClientService
 	}
 
 	@Override
-	public UserStringStringCompositePK store(ClientAccessTokenEntity entity) {
-		byte[] refreshTokenValue = null;
+	public UserStringStringCompositePK save(ClientAccessTokenEntity entity) {
+		byte[] refreshTokenValue;
 		if ( entity.getRefreshToken() != null ) {
 			refreshTokenValue = encryptor.encrypt(entity.getRefreshToken());
 			entity = entity.clone();
@@ -241,7 +245,7 @@ public class JdbcOAuth2AuthorizedClientService
 		final var sql = new SelectAuthorizedClient(id.getUserId(), id.getGroupId(), id.getEntityId());
 		List<ClientAccessTokenEntity> result = this.jdbcOperations.query(sql,
 				this.clientAccessTokenRowMapper);
-		return !result.isEmpty() ? result.get(0) : null;
+		return !result.isEmpty() ? result.getFirst() : null;
 	}
 
 	@Override
@@ -404,9 +408,13 @@ public class JdbcOAuth2AuthorizedClientService
 						+ "however, it was not found in the ClientRegistrationRepository.");
 			}
 			String principalName = rs.getString(3);
-			OAuth2AccessToken.TokenType tokenType = null;
-			if ( OAuth2AccessToken.TokenType.BEARER.getValue().equalsIgnoreCase(rs.getString(4)) ) {
+			String tokenTypeVal = rs.getString(4);
+			OAuth2AccessToken.TokenType tokenType;
+			if ( OAuth2AccessToken.TokenType.BEARER.getValue().equalsIgnoreCase(tokenTypeVal) ) {
 				tokenType = OAuth2AccessToken.TokenType.BEARER;
+			} else {
+				throw new DataRetrievalFailureException("The ClientRegistration with id '"
+						+ clientRegistrationId + "' token type unsupported: [" + tokenTypeVal + "].");
 			}
 			String tokenValue = new String(rs.getBytes(5), UTF_8);
 			Instant issuedAt = getTimestampInstant(rs, 6);
@@ -417,7 +425,15 @@ public class JdbcOAuth2AuthorizedClientService
 			OAuth2RefreshToken refreshToken = null;
 			byte[] refreshTokenValue = rs.getBytes(9);
 			if ( refreshTokenValue != null ) {
-				tokenValue = new String(encryptor.decrypt(refreshTokenValue), UTF_8);
+				try {
+					tokenValue = new String(encryptor.decrypt(refreshTokenValue), UTF_8);
+				} catch ( Exception e ) {
+					// fall back to unencrypted
+					log.warn(
+							"Exception decrypting user {} OAuth authorized client [{}] refresh token value; will treat as unencrypted: {}",
+							rs.getObject(1, Long.class), clientRegistrationId, e.toString());
+					tokenValue = new String(refreshTokenValue, UTF_8);
+				}
 				issuedAt = getTimestampInstant(rs, 10);
 				refreshToken = new OAuth2RefreshToken(tokenValue, issuedAt);
 			}
@@ -445,7 +461,17 @@ public class JdbcOAuth2AuthorizedClientService
 			result.setAccessTokenScopes(StringUtils.commaDelimitedListToSet(rs.getString(8)));
 			byte[] refreshTokenValue = rs.getBytes(9);
 			if ( refreshTokenValue != null ) {
-				result.setRefreshToken(encryptor.decrypt(refreshTokenValue));
+
+				try {
+					result.setRefreshToken(encryptor.decrypt(refreshTokenValue));
+				} catch ( Exception e ) {
+					// fall back to unencrypted
+					log.warn(
+							"Exception decrypting user {} OAuth authorized client [{}] refresh token value; will treat as unencrypted: {}",
+							userId, clientRegistrationId, e.toString());
+					result.setRefreshToken(refreshTokenValue);
+				}
+
 				result.setRefreshTokenIssuedAt(getTimestampInstant(rs, 10));
 			}
 
