@@ -1,21 +1,21 @@
 /* ==================================================================
  * SimpleInstructionFilter.java - Sep 30, 2011 9:31:17 AM
- * 
+ *
  * Copyright 2007-2011 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
@@ -24,7 +24,6 @@ package net.solarnetwork.central.instructor.support;
 
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -36,7 +35,7 @@ import net.solarnetwork.domain.SerializeIgnore;
 
 /**
  * Simple implementation of {@link InstructionFilter}.
- * 
+ *
  * @author matt
  * @version 2.2
  */
@@ -51,7 +50,7 @@ public class SimpleInstructionFilter implements InstructionFilter {
 	@Override
 	@SerializeIgnore
 	public Map<String, ?> getFilter() {
-		Map<String, Object> f = new LinkedHashMap<String, Object>(2);
+		Map<String, Object> f = new LinkedHashMap<>(2);
 		if ( nodeIds != null && nodeIds.length > 0 ) {
 			f.put("nodeId", nodeIds[0]); // backwards compatibility
 			f.put("nodeIds", nodeIds);
@@ -59,10 +58,10 @@ public class SimpleInstructionFilter implements InstructionFilter {
 		if ( instructionIds != null && instructionIds.length > 0 ) {
 			f.put("instructionIds", instructionIds);
 		}
-		if ( states != null && states.isEmpty() == false ) {
-			f.put("state", states.iterator().next().toString());
+		if ( states != null && !states.isEmpty() ) {
+			f.put("state", states.getFirst().toString());
 			if ( states.size() > 1 ) {
-				f.put("states", states.toArray(new InstructionState[states.size()]));
+				f.put("states", states.toArray(InstructionState[]::new));
 			}
 		}
 		if ( startDate != null ) {
@@ -76,17 +75,16 @@ public class SimpleInstructionFilter implements InstructionFilter {
 
 	/**
 	 * Set a single node ID.
-	 * 
+	 *
 	 * <p>
-	 * This is a convenience method for requests that use a single node ID at a
-	 * time. The node ID is still stored on the {@code nodeIds} array, just as
-	 * the first value. Calling this method replaces any existing
-	 * {@code nodeIds} value with a new array containing just the ID passed into
-	 * this method.
+	 * This is a convenience method for requests that use a single node ID at a time. The node ID is
+	 * still stored on the {@code nodeIds} array, just as the first value. Calling this method replaces
+	 * any existing {@code nodeIds} value with a new array containing just the ID passed into this
+	 * method.
 	 * </p>
-	 * 
+	 *
 	 * @param nodeId
-	 *        the ID of the node
+	 * 		the ID of the node
 	 */
 	public void setNodeId(Long nodeId) {
 		this.nodeIds = new Long[] { nodeId };
@@ -94,12 +92,12 @@ public class SimpleInstructionFilter implements InstructionFilter {
 
 	/**
 	 * Get the first node ID.
-	 * 
+	 *
 	 * <p>
-	 * This returns the first available node ID from the {@code nodeIds} array,
-	 * or <em>null</em> if not available.
+	 * This returns the first available node ID from the {@code nodeIds} array, or <em>null</em> if not
+	 * available.
 	 * </p>
-	 * 
+	 *
 	 * @return the first node ID
 	 */
 	@Override
@@ -118,14 +116,14 @@ public class SimpleInstructionFilter implements InstructionFilter {
 
 	@Override
 	public InstructionState getState() {
-		return (states != null && states.isEmpty() == false ? states.iterator().next() : null);
+		return (states != null && !states.isEmpty() ? states.getFirst() : null);
 	}
 
 	public void setState(InstructionState state) {
 		if ( state == null ) {
 			states = null;
 		} else {
-			states = Arrays.asList(state);
+			states = List.of(state);
 		}
 	}
 
@@ -135,18 +133,16 @@ public class SimpleInstructionFilter implements InstructionFilter {
 	}
 
 	/**
-	 * Set the {@code states} property via a Set. This is useful when using an
-	 * {@link EnumSet}.
-	 * 
+	 * Set the {@code states} property via a Set. This is useful when using an {@link EnumSet}.
+	 *
 	 * @param stateSet
-	 *        the Set to convert to a List of {@link InstructionState} values
-	 *        for the {@code states} property
+	 * 		the Set to convert to a List of {@link InstructionState} values for the {@code states} property
 	 */
 	public void setStateSet(Set<InstructionState> stateSet) {
 		if ( stateSet == null ) {
 			this.states = null;
 		} else {
-			this.states = new ArrayList<InstructionState>(stateSet);
+			this.states = new ArrayList<>(stateSet);
 		}
 	}
 
@@ -156,13 +152,13 @@ public class SimpleInstructionFilter implements InstructionFilter {
 		} else {
 			// filter out duplicates
 			Set<InstructionState> set = EnumSet.copyOf(states);
-			this.states = new ArrayList<InstructionState>(set);
+			this.states = new ArrayList<>(set);
 		}
 	}
 
 	/**
 	 * Get a set of instruction IDs.
-	 * 
+	 *
 	 * @since 1.1
 	 */
 	@Override
@@ -172,9 +168,9 @@ public class SimpleInstructionFilter implements InstructionFilter {
 
 	/**
 	 * Set an instruction IDs list.
-	 * 
+	 *
 	 * @param instructionIds
-	 *        the IDs to set
+	 * 		the IDs to set
 	 * @since 1.1
 	 */
 	public void setInstructionIds(Long[] instructionIds) {
@@ -188,9 +184,9 @@ public class SimpleInstructionFilter implements InstructionFilter {
 
 	/**
 	 * Set the start date (inclusive).
-	 * 
+	 *
 	 * @param startDate
-	 *        the start date
+	 * 		the start date
 	 * @since 2.1
 	 */
 	public void setStartDate(Instant startDate) {
@@ -204,9 +200,9 @@ public class SimpleInstructionFilter implements InstructionFilter {
 
 	/**
 	 * Set the end date (exclusive).
-	 * 
+	 *
 	 * @param endDate
-	 *        the end date
+	 * 		the end date
 	 * @since 2.1
 	 */
 	public void setEndDate(Instant endDate) {
