@@ -1,21 +1,21 @@
 /* ==================================================================
  * LocalizedInvoice.java - 30/08/2017 7:24:09 AM
- * 
+ *
  * Copyright 2017 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
@@ -45,10 +45,11 @@ import net.solarnetwork.central.user.billing.domain.InvoiceUsageRecord;
 import net.solarnetwork.central.user.billing.domain.LocalizedInvoiceInfo;
 import net.solarnetwork.central.user.billing.domain.LocalizedInvoiceItemInfo;
 import net.solarnetwork.central.user.billing.domain.LocalizedInvoiceUsageRecordInfo;
+import net.solarnetwork.domain.Identity;
 
 /**
  * Localized version of {@link Invoice}.
- * 
+ *
  * @author matt
  * @version 2.0
  */
@@ -59,7 +60,7 @@ public class LocalizedInvoice implements Invoice, LocalizedInvoiceInfo {
 
 	/**
 	 * Convenience builder.
-	 * 
+	 *
 	 * @param invoice
 	 *        the invoice to localize
 	 * @param locale
@@ -72,7 +73,7 @@ public class LocalizedInvoice implements Invoice, LocalizedInvoiceInfo {
 
 	/**
 	 * Constructor.
-	 * 
+	 *
 	 * @param invoice
 	 *        the invoice to localize
 	 * @param locale
@@ -275,21 +276,20 @@ public class LocalizedInvoice implements Invoice, LocalizedInvoiceInfo {
 
 	@Override
 	public List<LocalizedInvoiceItemInfo> getLocalizedTaxInvoiceItemsGroupedByDescription() {
-		List<InvoiceItem> taxItems = getTaxInvoiceItemsStream().collect(Collectors.toList());
+		List<InvoiceItem> taxItems = getTaxInvoiceItemsStream().toList();
 		if ( taxItems.isEmpty() ) {
 			return null;
 		}
 
 		// maintain ordering based on original invoice items
-		List<String> ordering = taxItems.stream().map(item -> item.getId()).collect(Collectors.toList());
+		List<String> ordering = taxItems.stream().map(Identity::getId).toList();
 
 		// return list of AggregateInvoiceItem, grouped by InvoiceItem::getDescription
 		return taxItems.stream()
 				.collect(Collectors.groupingBy(InvoiceItem::getDescription,
 						Collector.of(AggregateLocalizedInvoiceItem.itemOfLocale(locale),
-								(agg, item) -> agg.addItem(item), (agg1, agg2) -> {
-									return agg1.addItems(agg2);
-								})))
+								AggregateLocalizedInvoiceItem::addItem,
+								AggregateLocalizedInvoiceItem::addItems)))
 				.values().stream().sorted(Comparator.comparing(item -> ordering.indexOf(item.getId())))
 				.collect(Collectors.toList());
 	}
